# py1

./: README.md  app.py  pyproject.toml  teste.ipynb
